Included comments, deleted tutorial.

--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## News scraping\n",
+    "\n",
+    "This notebook exctracts news from www.minuto30.com based on the tutorial in https://www.dataquest.io/blog/web-scraping-tutorial-python/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the html code for the headlines page for Medellín"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2071,8 +2087,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The page presents all the artciles in a container of class \"main-content\". Within that container, news articles are in boxes of the class \"mh-posts-list-content\".\n",
+    "\n",
+    "We extract the code in the main container and then find all the articles. We display the code for the first article."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2120,41 +2145,21 @@
    ],
    "source": [
     "news = soup_med.find(id=\"main-content\")\n",
-    "articles = news.find_all(class_=\"mh-posts-list-content clearfix\")\n",
+    "articles = news.find_all(class_=\"mh-posts-list-content\")\n",
     "ar = articles[0]\n",
     "print(ar.prettify())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\t\t\t\t\tCaminaba por el barrio Cristóbal cuando motorizados se acercaron y dispararon en su contra\t\t\t\t\n",
-      "\n",
-      "\n",
-      "2 junio, 2018\n",
-      "Mauricio Berrío\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
-    "title = ar.find(class_=\"entry-title mh-posts-list-title\").get_text()\n",
-    "print(title)\n",
-    "meta = ar.find(class_=\"mh-meta entry-meta\").get_text()\n",
-    "print(meta)"
+    "We extract the title, date, and author from each article."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2183,9 +2188,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 53,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "We organize the results in a dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2224,170 +2238,6 @@
     "        \"title\": titles\n",
     "    })\n",
     "print(news)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Sunny', 'Partly Cloudy', 'Mostly Sunny', 'Mostly Clearand Breezythen MostlyCloudy', 'Mostly Sunnythen Sunnyand Breezy', 'Mostly Clearand Breezythen PatchyDrizzle andPatchy Fog', 'PatchyDrizzle andPatchy Fogthen Sunny', 'Mostly Cloudy', 'Partly Sunny']\n",
-      "['High: 73 °F', 'Low: 53 °F', 'High: 67 °F', 'Low: 53 °F', 'High: 65 °F', 'Low: 52 °F', 'High: 64 °F', 'Low: 52 °F', 'High: 61 °F']\n",
-      "['Today: Sunny, with a high near 73. West southwest wind 5 to 10 mph increasing to 16 to 21 mph in the afternoon. Winds could gust as high as 26 mph. ', 'Tonight: Partly cloudy, with a low around 53. West southwest wind 16 to 21 mph decreasing to 8 to 13 mph after midnight. Winds could gust as high as 26 mph. ', 'Sunday: Mostly sunny, with a high near 67. West southwest wind 7 to 12 mph increasing to 16 to 21 mph in the afternoon. Winds could gust as high as 28 mph. ', 'Sunday Night: Partly cloudy, with a low around 53. Breezy, with a west southwest wind 15 to 22 mph, with gusts as high as 28 mph. ', 'Monday: Mostly sunny, with a high near 65. Breezy, with a west wind 18 to 23 mph, with gusts as high as 30 mph. ', 'Monday Night: Patchy drizzle and fog after midnight.  Mostly cloudy, with a low around 52. Breezy. ', 'Tuesday: Patchy drizzle and fog before noon.  Partly sunny, with a high near 64.', 'Tuesday Night: Mostly cloudy, with a low around 52.', 'Wednesday: Partly sunny, with a high near 61.']\n"
-     ]
-    }
-   ],
-   "source": [
-    "short_descs = [sd.get_text() for sd in seven_day.select(\".tombstone-container .short-desc\")]\n",
-    "temps = [t.get_text() for t in seven_day.select(\".tombstone-container .temp\")]\n",
-    "descs = [d[\"title\"] for d in seven_day.select(\".tombstone-container img\")]\n",
-    "\n",
-    "print(short_descs)\n",
-    "print(temps)\n",
-    "print(descs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>desc</th>\n",
-       "      <th>period</th>\n",
-       "      <th>short_desc</th>\n",
-       "      <th>temp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Today: Sunny, with a high near 73. West southw...</td>\n",
-       "      <td>Today</td>\n",
-       "      <td>Sunny</td>\n",
-       "      <td>High: 73 °F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Tonight: Partly cloudy, with a low around 53. ...</td>\n",
-       "      <td>Tonight</td>\n",
-       "      <td>Partly Cloudy</td>\n",
-       "      <td>Low: 53 °F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Sunday: Mostly sunny, with a high near 67. Wes...</td>\n",
-       "      <td>Sunday</td>\n",
-       "      <td>Mostly Sunny</td>\n",
-       "      <td>High: 67 °F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Sunday Night: Partly cloudy, with a low around...</td>\n",
-       "      <td>SundayNight</td>\n",
-       "      <td>Mostly Clearand Breezythen MostlyCloudy</td>\n",
-       "      <td>Low: 53 °F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Monday: Mostly sunny, with a high near 65. Bre...</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>Mostly Sunnythen Sunnyand Breezy</td>\n",
-       "      <td>High: 65 °F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Monday Night: Patchy drizzle and fog after mid...</td>\n",
-       "      <td>MondayNight</td>\n",
-       "      <td>Mostly Clearand Breezythen PatchyDrizzle andPa...</td>\n",
-       "      <td>Low: 52 °F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Tuesday: Patchy drizzle and fog before noon.  ...</td>\n",
-       "      <td>Tuesday</td>\n",
-       "      <td>PatchyDrizzle andPatchy Fogthen Sunny</td>\n",
-       "      <td>High: 64 °F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Tuesday Night: Mostly cloudy, with a low aroun...</td>\n",
-       "      <td>TuesdayNight</td>\n",
-       "      <td>Mostly Cloudy</td>\n",
-       "      <td>Low: 52 °F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Wednesday: Partly sunny, with a high near 61.</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>Partly Sunny</td>\n",
-       "      <td>High: 61 °F</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                desc        period  \\\n",
-       "0  Today: Sunny, with a high near 73. West southw...         Today   \n",
-       "1  Tonight: Partly cloudy, with a low around 53. ...       Tonight   \n",
-       "2  Sunday: Mostly sunny, with a high near 67. Wes...        Sunday   \n",
-       "3  Sunday Night: Partly cloudy, with a low around...   SundayNight   \n",
-       "4  Monday: Mostly sunny, with a high near 65. Bre...        Monday   \n",
-       "5  Monday Night: Patchy drizzle and fog after mid...   MondayNight   \n",
-       "6  Tuesday: Patchy drizzle and fog before noon.  ...       Tuesday   \n",
-       "7  Tuesday Night: Mostly cloudy, with a low aroun...  TuesdayNight   \n",
-       "8      Wednesday: Partly sunny, with a high near 61.     Wednesday   \n",
-       "\n",
-       "                                          short_desc         temp  \n",
-       "0                                              Sunny  High: 73 °F  \n",
-       "1                                      Partly Cloudy   Low: 53 °F  \n",
-       "2                                       Mostly Sunny  High: 67 °F  \n",
-       "3            Mostly Clearand Breezythen MostlyCloudy   Low: 53 °F  \n",
-       "4                   Mostly Sunnythen Sunnyand Breezy  High: 65 °F  \n",
-       "5  Mostly Clearand Breezythen PatchyDrizzle andPa...   Low: 52 °F  \n",
-       "6              PatchyDrizzle andPatchy Fogthen Sunny  High: 64 °F  \n",
-       "7                                      Mostly Cloudy   Low: 52 °F  \n",
-       "8                                       Partly Sunny  High: 61 °F  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "weather = pd.DataFrame({\n",
-    "        \"period\": periods, \n",
-    "        \"short_desc\": short_descs, \n",
-    "        \"temp\": temps, \n",
-    "        \"desc\":descs\n",
-    "    })\n",
-    "weather"
    ]
   }
  ],
