Improved table format.

--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -141,39 +141,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              author           date  \\\n",
-      "0    Mauricio Berrío  2 junio, 2018   \n",
-      "1    Mauricio Berrío  2 junio, 2018   \n",
-      "2    Mauricio Berrío  2 junio, 2018   \n",
-      "3      ZPaola Agredo  2 junio, 2018   \n",
-      "4      ZPaola Agredo  2 junio, 2018   \n",
-      "5    Mauricio Berrío  2 junio, 2018   \n",
-      "6    Mauricio Berrío  2 junio, 2018   \n",
-      "7    Mauricio Berrío  2 junio, 2018   \n",
-      "8  Stephany Ceballos  1 junio, 2018   \n",
-      "9    Mauricio Berrío  1 junio, 2018   \n",
-      "\n",
-      "                                               title  \n",
-      "0  Caminaba por el barrio Cristóbal cuando motori...  \n",
-      "1  VIDEO y FOTOS: Se le montaron a la volqueta y ...  \n",
-      "2  Dos carros y tres motos fueron recuperados por...  \n",
-      "3  VIDEO: Una valiente patrullera, entre los poli...  \n",
-      "4  FOTOS: Debido a una fuga en la red hay interru...  \n",
-      "5  FOTOS: Dos menores caminaban por El Danubio y ...  \n",
-      "6  En medio de una riña un hombre resultó muerto ...  \n",
-      "7  Ladrón fue capturado en Las Palmas con element...  \n",
-      "8  EN VIDEO: Tracto camión se quedó sin frenos ba...  \n",
-      "9             Capturado en el barrio 13 de Noviembre  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author</th>\n",
+       "      <th>date</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mauricio Berrío</td>\n",
+       "      <td>2 junio, 2018</td>\n",
+       "      <td>Caminaba por el barrio Cristóbal cuando motori...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mauricio Berrío</td>\n",
+       "      <td>2 junio, 2018</td>\n",
+       "      <td>VIDEO y FOTOS: Se le montaron a la volqueta y ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mauricio Berrío</td>\n",
+       "      <td>2 junio, 2018</td>\n",
+       "      <td>Dos carros y tres motos fueron recuperados por...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ZPaola Agredo</td>\n",
+       "      <td>2 junio, 2018</td>\n",
+       "      <td>VIDEO: Una valiente patrullera, entre los poli...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ZPaola Agredo</td>\n",
+       "      <td>2 junio, 2018</td>\n",
+       "      <td>FOTOS: Debido a una fuga en la red hay interru...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Mauricio Berrío</td>\n",
+       "      <td>2 junio, 2018</td>\n",
+       "      <td>FOTOS: Dos menores caminaban por El Danubio y ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Mauricio Berrío</td>\n",
+       "      <td>2 junio, 2018</td>\n",
+       "      <td>En medio de una riña un hombre resultó muerto ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Mauricio Berrío</td>\n",
+       "      <td>2 junio, 2018</td>\n",
+       "      <td>Ladrón fue capturado en Las Palmas con element...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Stephany Ceballos</td>\n",
+       "      <td>1 junio, 2018</td>\n",
+       "      <td>EN VIDEO: Tracto camión se quedó sin frenos ba...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Mauricio Berrío</td>\n",
+       "      <td>1 junio, 2018</td>\n",
+       "      <td>Capturado en el barrio 13 de Noviembre</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              author           date  \\\n",
+       "0    Mauricio Berrío  2 junio, 2018   \n",
+       "1    Mauricio Berrío  2 junio, 2018   \n",
+       "2    Mauricio Berrío  2 junio, 2018   \n",
+       "3      ZPaola Agredo  2 junio, 2018   \n",
+       "4      ZPaola Agredo  2 junio, 2018   \n",
+       "5    Mauricio Berrío  2 junio, 2018   \n",
+       "6    Mauricio Berrío  2 junio, 2018   \n",
+       "7    Mauricio Berrío  2 junio, 2018   \n",
+       "8  Stephany Ceballos  1 junio, 2018   \n",
+       "9    Mauricio Berrío  1 junio, 2018   \n",
+       "\n",
+       "                                               title  \n",
+       "0  Caminaba por el barrio Cristóbal cuando motori...  \n",
+       "1  VIDEO y FOTOS: Se le montaron a la volqueta y ...  \n",
+       "2  Dos carros y tres motos fueron recuperados por...  \n",
+       "3  VIDEO: Una valiente patrullera, entre los poli...  \n",
+       "4  FOTOS: Debido a una fuga en la red hay interru...  \n",
+       "5  FOTOS: Dos menores caminaban por El Danubio y ...  \n",
+       "6  En medio de una riña un hombre resultó muerto ...  \n",
+       "7  Ladrón fue capturado en Las Palmas con element...  \n",
+       "8  EN VIDEO: Tracto camión se quedó sin frenos ba...  \n",
+       "9             Capturado en el barrio 13 de Noviembre  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -182,7 +274,7 @@
     "        \"author\": authors, \n",
     "        \"title\": titles\n",
     "    })\n",
-    "print(news)"
+    "news"
    ]
   }
  ],
